ci(travis): check test-results

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,8 @@ before_script:
 
 script:
   - ant test
+  - xmllint --xpath "//@failures = 0" result/*.xml
+  - xmllint --xpath "//@errors = 0" result/*.xml
 
 after_success:
   - docker stop exist-ci
