ci(travis): disable v5 and up, add v3 for testing

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,10 +15,12 @@ services:
   - docker
 
 env:
-  - img=existdb/existdb:latest
-  - img=existdb/existdb:release
-  - img=existdb/existdb:5.0.0
+  # TODO support versions 5.0.0 and up
+  # - img=existdb/existdb:latest
+  # - img=existdb/existdb:release
+  # - img=existdb/existdb:5.0.0
   - img=existdb/existdb:4.7.1
+  - img=evolvedbinary/exist-db:eXist-3.6.1-minimal
 
 
 before_install:
